# park-run-app

./: .gitignore  Makefile  README.md  app.py  main.py  menu.py  organizers.csv  pyproject.toml  runners.csv
.streamlit/: config.toml
notebooks/: sql_queries.ipynb
pages/: about.py  home.py  main_table.py  orgs_table.py  parcer.py  records.py  records_table.py  runs_table.py  sql.py
pages_dir/: about.py  main_table.py  orgs_table.py  records_table.py  runs_table.py
src/: 01_data_collection.py  02_01_load_events_table.py  02_02_load_participants_table.py  02_03_load_volunteers_table.py  03_updates_status.py  04_run_updates.py
