[tool.poetry]
name = "park-run-app-prod"
version = "0.1.0"
description = ""
authors = ["artyom_ev"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
pandas = "^2.2.3"
bs4 = "^0.0.2"
streamlit = "^1.38.0"
requests = "^2.32.3"
sqlalchemy = "^2.0.35"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
