[tool.poetry]
package-mode = false
name = "park-run-app"
version = "2.1.0"
description = "Duck Run App"
authors = ["artyom_ev"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
streamlit = "1.32.0"
pandas = "^2.2.3"
bs4 = "^0.0.2"
requests = "^2.32.3"
aiohttp = "^3.10.9"
supabase = "^2.11.0"
tqdm = "^4.67.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"